# nexon

./: .gitignore  README.md
nexon/: pyproject.toml
nexon/.github/workflows/: ci_nexon.yml  e2e-ci-phase7.yml  e2e-ci.yml  release.yml
nexon/docs/: Acknowledgements.md  CHANGELOG.md  Config-Reference.md  Contributing.md  FAQs.md  commands.md  examples.md  getting_started.md  plugin-guide.md  policies.yaml.sample  release_automation_packaging.md
nexon/examples/: demo.sh  demo_windows.ps1  env_animator.yaml  package_mytool.yaml  recipe_override.yaml  render_submit.sh
nexon/examples/layers/: alice.yaml  fx_defaults.yaml  global_defaults.yaml  seq01_overrides.yaml
nexon/nexon_cli/: cli.py
nexon/nexon_cli/commands/: activate_env.py  build_package.py  create_env.py  create_package.py  create_recipe.py  deactivate_env.py  detect_hardware.py  install_package.py  list_envs.py  list_packages.py  lock_env.py  uninstall_package.py
nexon/nexon_cli/core/: env_manager.py  hardware_detector.py  interpreter_manager.py
nexon/nexon_cli/models/: environment_model.py
nexon/nexon_cli/utils/: logger.py  shell_ops.py
nexon/nexon_server/: .env  Dockerfile  nexon.db  requirements.txt
nexon/nexon_server/alembic/: env.py
nexon/nexon_server/app/: config.py  db.py  main.py
nexon/nexon_web/static/: index.html  (+1 more)
nexon/nexon_web_preview/: manifest.json
nexon/tests/: test_cli_tenant_isolation.py  test_import_pypi.py  test_integration.py  test_layers.py  test_metrics.py  test_nexon_core.py  test_plugin_lifecycle.py  test_rbac_token.py  test_snapshot_manager.py  text_cli.py
(+164 files in other folders)
